Update French translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Aug 19 00:25:12 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * doc/fr/dpkg-{query,split,statoverride}.8: added
+  * doc/fr/*: Updated
+
 Thu Aug 16 00:43:23 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/fr.po: Updated
