--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,7 @@ dpkg (1.10) unstable; urgency=low
   * Add configurable package listing support to dpkg-query
   * Handle window resize in dselect main menu. Closes: Bug#98275
   * update-rc.d moved to the sysvinit package. Closes: Bug#108887
+  * Update French translation
 
  -- Wichert Akkerman <wakkerma@debian.org>  Wed,  1 Aug 2001 15:12:57 +0200
 
