Fixed msgfmt errors

--- a/po/sv.po
+++ b/po/sv.po
@@ -6,8 +6,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.10\n"
-"POT-Creation-Date: 2001-08-11 22:40+0200\n"
-"PO-Revision-Date: 2001-08-11 22:54+0200\n"
+"POT-Creation-Date: 2001-08-19 20:38+0200\n"
+"PO-Revision-Date: 2001-08-19 20:39+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
@@ -2077,6 +2077,7 @@ msgid ""
 msgstr ""
 "Detta program är fri programvara. Se GNU General Public License version 2\n"
 "eller senare för kopieringsvillkor. Det finns INGEN garanti.\n"
+"Se "
 
 #: main/main.c:50 main/query.c:436
 msgid " --licence for copyright and license details.\n"
@@ -3040,7 +3041,7 @@ msgstr "Debian \""
 
 #: main/query.c:432
 msgid "' package management program query tool\n"
-msgstr "\" paketfrågeprogram version "
+msgstr "\" frågeverktyg för pakethanteringsprogrammet\n"
 
 #: main/query.c:444
 msgid "Usage: "
@@ -3092,7 +3093,8 @@ msgstr ""
 "Formatsyntax:\n"
 "  Ett format är en sträng som kommer skrivas ut för varje paket. Formatet\n"
 "  kan innehålla de vanliga teckensekvenserna \\n (ny rad), \\r (vagnretur)\n"
-"  eller \\\\ (vanligt omvänt snedstreck). Paketinformation kan läggas in genom\n"
+"  eller \\\\ (vanligt omvänt snedstreck). Paketinformation kan läggas in "
+"genom\n"
 "  att lägga in variabelreferenser till paketfält genom att använda syntaxen\n"
 "  ${var[;bredd]}. Fälten kommer att högerjusteras såvida inte bredden anges\n"
 "  negativt, i vilket fall vänsterjustering kommer användas.\n"
@@ -3104,7 +3106,8 @@ msgid ""
 "\n"
 msgstr ""
 "Använd --help för hjälp om att fråga efter paketinformation;\n"
-"Använd --license för upphovsrättslig licens och avsaknad av garanti (GNU GPL).\n"
+"Använd --license för upphovsrättslig licens och avsaknad av garanti (GNU "
+"GPL).\n"
 
 #: main/showpkg.c:71
 #, c-format
