--- a/debian/changelog
+++ b/debian/changelog
@@ -33,10 +33,10 @@ dpkg (1.10) unstable; urgency=low
     (-L,-l,-s,-S) dpkg will still call it for you.
   * Add configurable package listing support to dpkg-query
   * Handle window resize in dselect main menu. Closes: Bug#98275
-  * update-rc.d moved to the sysvinit package. Closes: Bug#108887
+  * update-rc.d moved to the sysvinit package. Closes: Bug#108887,#109282
   * Update French translation
 
- -- Wichert Akkerman <wakkerma@debian.org>  Wed,  1 Aug 2001 15:12:57 +0200
+ -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
 dpkg (1.9.16) unstable; urgency=low
 
