Add showformat changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ dpkg (1.10) unstable; urgency=low
   * Handle window resize in dselect main menu. Closes: Bug#98275
   * update-rc.d moved to the sysvinit package. Closes: Bug#108887,#109282
   * Update French translation
+  * Add --showformat and --show options to dpkg-deb and dpkg-query to
+    allow one to customize the output format
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
