Fix unterminated line in usage text

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Sep 12 17:28:57 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * dpkg-deb/main.c: Fix unterminated line in usage text
+
 Mon Sep 10 12:57:21 PDT 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dpkg-deb/dpkg-deb.h: add parseformat prototype
