--- a/doc/sv/dpkg-split.8
+++ b/doc/sv/dpkg-split.8
@@ -1,6 +1,6 @@
 .\" Hey, Emacs!  This is an -*- nroff -*- source file.
 .\" Authors: Ian Jackson
-.\" Translatino of CVS revision 1.3
+.\" Translation of CVS revision 1.4
 .TH dpkg-split 1 "23 juni 1996" "Debian GNU/Linux"
 .SH NAMN
 dpkg\-split \- Verktyg för att dela/slå ihop Debianpaket
@@ -247,9 +247,9 @@ Filnamnen som används i denna katalog är i ett internt format för
 och är knappast användbara för andra program, och hur som helst kan inte
 formatet på filnamnen litas på.
 .SH SE ÄVEN
-.BR dpkg\-split (5),
-.BR dpkg\-deb (5),
-.BR dpkg\-deb (8),
+.BR deb (5),
+.BR deb\-control (5),
+.BR dpkg\-deb (1),
 .BR dpkg (8)
 .SH FÖRFATTARE
 .B dpkg\-split
