--- a/doc/sv/deb-control.5
+++ b/doc/sv/deb-control.5
@@ -59,7 +59,7 @@ Några vanliga sektioner är "utils", "net", "mail", "text", "x11" etc.
 .TP
 .BR "Priority: " "<prioritet>"
 Ställer in hur viktigt paketet är jämfört med systemet som enhet.
-Vanliga prioriteter är "required" (krävd), "standard" (normal(, "optional"
+Vanliga prioriteter är "required" (krävd), "standard" (normal), "optional"
 (valfritt), "extra" (extra) osv.
 .LP
 I Debian har fälten
