--- a/doc/sv/deb.5
+++ b/doc/sv/deb.5
@@ -1,9 +1,9 @@
 .\" Translation of CVS revision 1.8
 .TH DEB 5 "Januari 2000" "Debianprojektet" "Debian"
-.SH NAME 
+.SH NAMN 
 deb \- Debians binära paketformat
 .SH SYNOPS
-.IB filenamn .deb
+.IB filnamn .deb
 .SH BESKRIVNING
 .BR .deb -formatet
 är Debians binära paketformat. Det förstås av dpkg 0.93.76 och senare, och
