--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -266,9 +266,9 @@ Dessa tillhandahålls endast för kompatibilitet med kontrollfilssyntaxen:
 \fB< << <= = >= >> >\fP.
 .TP
 .B dpkg --command-fd <n>
-Läser en följd av kommandon från indatafildeskriptor \fB<n>\fP.
-Observera: Flaggor som sätts på kommandoraden, och genom denna
-fildeskriptor, återställs inte för kommandon som körs i en följd under
+Läser en följd av kommandon från indatafilhandtag \fB<n>\fP.
+Observera: Flaggor som sätts på kommandoraden, och genom detta
+filhandtag, återställs inte för kommandon som körs i en följd under
 samma körning.
 .TP
 .B dpkg --help
@@ -359,7 +359,7 @@ Om du använder dem utan att fullt ut förstå vad de går ut på kan du förstöra
 din systeminstallation.\fP
 
 \fBall\fP:
-Slår på (eller av) alla tvingande parameterar.
+Slår på (eller av) alla tvingande parametrar.
 
 \fBauto-select\fP(*):
 Markerar paket för att installera, och avmarkerar paket för att ta bort.
@@ -482,7 +482,7 @@ Till exempel kommer paket som tas bort att markeras för installation.
 Installera inte paketet om samma version av paketet redan är installerat.
 .TP
 .\fB--status-fd \fP\fI<n>\fP
-Sänder paketstatusinformation till fildeskriptor \fI<n>\fP.
+Sänder paketstatusinformation till filhandtag \fI<n>\fP.
 Denna flagga kan ges flera gånger.
 Statusuppdateringar ges på formen "status: <paket>: <paket qstatus>".
 
