--- a/doc/sv/dselect.8
+++ b/doc/sv/dselect.8
@@ -349,7 +349,7 @@ sökningen därifrån.
 .sp
 Listans sorteringsordning kan ändras genom att trycka på tangenterna
 \fB"o"\fP och \fB"O"\fP upprepade gånger.
-Följande nio sorteringsordningar kan väljar:
+Följande nio sorteringsordningar kan väljas:
  alfabetisk         tillgänglig            status
  prioritet+sektion  tillgänglig+prioritet  status+prioritet
  sektion+prioritet  tillgänglig+sektion    status+sektion
@@ -376,7 +376,7 @@ genom att peka markeringsraden på en grupprubrik.
 Exakt hur paketen grupperas beror på vilken listordning som för tillfället
 används.
 .sp
-Nödvändiga försighetsåtgärder skall tas när ändringar görs på stora
+Nödvändiga försiktighetsåtgärder skall tas när ändringar görs på stora
 gruppmarkeringar, eftersom detta med en gång kan ge stora mängder
 otillfredsställda beroenden eller konflikter, vilka alla kommer att visas på
 en beroendelösningsskärm, vilket gör dem mycket svåra att hantera.
