--- a/doc/sv/start-stop-daemon.8
+++ b/doc/sv/start-stop-daemon.8
@@ -48,7 +48,7 @@ Eventuella parametrar som ges efter
 på kommandoraden skickas omodiferade till programmet som startas.
 Om
 .B --retry
-anges kommer start-stopd-daemon kontrollera att processen har avslutats.
+anges kommer start-stop-daemon kontrollera att processen har avslutats.
 
 Med 
 .B --stop
@@ -124,7 +124,7 @@ att användas, där
 varje post är antingen
 .BI - signalnummer
 eller [\fB\-\fP]\fIsignalnamn\fP,
-vilket betyder att singalen skall sändas, eller
+vilket betyder att signalen skall sändas, eller
 .IR timeout ,
 vilket anger det antal sekunder programmet skall vänta på att processen
 avslutar, eller
