Strip enoent as well

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Sep 20 17:06:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/rules: strip enoent as well
+
 Sat Sep 15 20:19:57 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: Several fixes:
