--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,7 @@ dpkg (1.10) unstable; urgency=low
     * /usr/share/info/dir now has it's entries formatted to even widths. 
       Closes: #11228
     * --calign|--align|--maxwidth are now ignored.
+  * strip enoent as well. Closes: Bug#112378
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
