* debian/control: Several fixes:   * dpkg-static needs the same set of Depends(and others) lines as dpkg.   * Modify the dpkg-static description to note that it's a static compile.   * Bump the conflicts on sysvinit to 2.82-1, as that is the version that     actually has the proper replaces line. * debian/rules: dpkg-static was actually being built as dpkg.deb.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Sun Oct  7 03:12:35 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * debian/control: Several fixes:
+    * dpkg-static needs the same set of Depends(and others) lines as dpkg.
+    * Modify the dpkg-static description to note that it's a static
+      compile.
+    * Bump the conflicts on sysvinit to 2.82-1, as that is the version
+      that actually has the proper replaces line.
+  * debian/rules: dpkg-static was actually being built as dpkg.deb.
+
 Thu Sep 20 17:06:48 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * debian/rules: strip enoent as well
