--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct  7 22:23:54 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * Makefile.in: Remove dulicate inclusion of utils in SUBDIRS.
+
 Sun Oct  7 19:38:56 CDT 2001 Adam Heath <doogie@debian.org>
 
   * scripts/install-info.pl: oops.  We weren't adding '\n' when printing
