--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Oct  8 19:48:28 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * main/main.c: Make sure the integer passed to --result-fd is correct
+    before manipulating the pointers(we checked after we manipulated
+    previously)
+
 Sun Oct  7 22:23:54 CDT 2001 Adam Heath <doogie@debian.org>
 
   * Makefile.in: Remove dulicate inclusion of utils in SUBDIRS.
