Update Danish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 14 15:04:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/da.po: Updated
+
 Mon Oct  8 19:51:36 CDT 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c: Turn setstatuspipe into a generic setpipe, in preparation
