Update Polish translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.10) unstable; urgency=low
   * Make dpkg-checkbuilddeps use dpkg-architecture. Closes: Bug#104230
   * Improve dpkg-archtecture documentation. Closes: Bug#104232
   * Update German translation. Closes: Bug#97239
+  * Update Polish translation. Closes: Bug#115783
   * Add German md5sum manpage
   * Improve dselect manpage. Closes: Bug#103839
   * dpkg-name(1) no longer mentions the non-existing dpkg(5) manpage.
@@ -53,6 +54,7 @@ dpkg (1.10) unstable; urgency=low
       Closes: #11228
     * --calign|--align|--maxwidth are now ignored.
   * strip enoent as well. Closes: Bug#112378
+  * Fix format error in Dutch translation. Closes: Bug#113120
 
  -- Wichert Akkerman <wakkerma@debian.org>  Mon, 20 Aug 2001 14:54:38 +0200
 
