--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 16 13:09:21 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/pl.po: Updated
+
 Sun Oct 14 15:04:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/da.po: Updated
