Updated polish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 21 03:57:08 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/pl.po: Updated
+
 Wed Oct 17 12:34:19 CDT 2001 Adam Heath <doogie@debian.org>
 
   * Merge 1.9.17 branch:
