--- a/po/pl.po
+++ b/po/pl.po
@@ -5008,7 +5008,7 @@ msgstr "Pakiety wycofane lub dostêpne tylko lokalnie"
 
 #: dselect/pkgdisplay.cc:106
 msgid "Up to date installed packages"
-msgstr "Pakiety do zaktualizowania"
+msgstr "Pakiety aktualne"
 
 #: dselect/pkgdisplay.cc:107
 msgid "Available packages (not currently installed)"
