--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Oct 21 12:56:37 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * archtable, scripts/dpkg-architecture.pl: Add darwin.  The source
+    doesn't quite work yet on darwin however, as some of the changes are
+    being discussed.
+
 Sun Oct 21 03:57:08 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/pl.po: Updated
