Run ranlib after creating the library.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct 21 12:58:04 CDT 2001 Adam Heath <doogie@debian.org>
+
+  * optlib/Makefile.in: Run ranlib after creating the library.
+
 Sun Oct 21 12:56:37 CDT 2001 Adam Heath <doogie@debian.org>
 
   * archtable, scripts/dpkg-architecture.pl: Add darwin.  The source
