Fix translations with inconsistent printf format strings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 25 16:56:06 JST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * po/{de,it,pt_BR,sv}.po: Fix translation with inconsistent printf
+    format strings
+
 Sun Oct 21 12:58:04 CDT 2001 Adam Heath <doogie@debian.org>
 
   * optlib/Makefile.in: Run ranlib after creating the library.
