--- a/po/it.po
+++ b/po/it.po
@@ -4095,7 +4095,7 @@ msgstr "Esegui md5sum --help per un aiuto."
 #: utils/md5sum.c:78
 #, c-format
 msgid "error processing %s: %s\n"
-msgstr "%s: errore nell'elaborazione di %s: %s\n"
+msgstr "errore nell'elaborazione di %s: %s\n"
 
 #: utils/md5sum.c:169
 msgid ""
