--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1469,8 +1469,7 @@ msgstr ""
 #, c-format
 msgid "dpkg: %s: warning - unable to open conffile %s for hash: %s\n"
 msgstr ""
-"dpkg: %s: aviso - não foi possível abrir arquivo de configuração para hash: %"
-"s\n"
+"dpkg: %s: aviso - não foi possível abrir arquivo de configuração %s para hash: %s\n"
 
 #: main/depcon.c:74
 #, c-format
