--- a/po/sv.po
+++ b/po/sv.po
@@ -201,7 +201,7 @@ msgstr ""
 #: lib/dump.c:321
 #, c-format
 msgid "failed to install `%.250s' as `%.250s' containing %s info"
-msgstr "kunde inte installera \"%.250\" som \"%.250s\" med %s-information"
+msgstr "kunde inte installera \"%.250s\" som \"%.250s\" med %s-information"
 
 #: lib/ehandle.c:81
 msgid "out of memory pushing error handler: "
@@ -808,12 +808,12 @@ msgstr "fel när tidsstämplingarna på \"%.255s\" skulle sättas"
 #: main/archives.c:266 main/archives.c:513
 #, c-format
 msgid "error setting ownership of `%.255s'"
-msgstr "fel när ägandeskap för \"%.255\" skulle sättas"
+msgstr "fel när ägandeskap för \"%.255s\" skulle sättas"
 
 #: main/archives.c:268 main/archives.c:516
 #, c-format
 msgid "error setting permissions of `%.255s'"
-msgstr "fel när behörighet för \"%.255\" skulle sättas"
+msgstr "fel när behörighet för \"%.255s\" skulle sättas"
 
 # ??!?!?
 #: main/archives.c:351
@@ -823,7 +823,7 @@ msgid ""
 "%.100s%.10s"
 msgstr ""
 "försökte skriva över \"%.250s\", vilket är den omdirigerade varianten av "
-"\".250s\"%.10s%.100s%.10s"
+"\"%.250s\"%.10s%.100s%.10s"
 
 #: main/archives.c:355
 msgid " (package: "
@@ -1179,7 +1179,7 @@ msgstr "Ställer in %s (%s) ...\n"
 #: main/configure.c:167
 #, c-format
 msgid "unable to stat new dist conffile `%.250s'"
-msgstr "kunde inte ta status på ny medsänd konfigurationsfil \"%.250\""
+msgstr "kunde inte ta status på ny medsänd konfigurationsfil \"%.250s\""
 
 #: main/configure.c:176
 #, c-format
@@ -1194,7 +1194,7 @@ msgstr "kunde inte sätta läge på ny medsänd konfigurationsfil \"%.250s\""
 #: main/configure.c:182
 #, c-format
 msgid "unable to stat current installed conffile `%.250s'"
-msgstr "kunde inte ta status på nu installerad konfigurationsfil \"%.250\""
+msgstr "kunde inte ta status på nu installerad konfigurationsfil \"%.250s\""
 
 #: main/configure.c:191
 #, c-format
@@ -1821,7 +1821,7 @@ msgstr "fillista för paketet \"%.250s\""
 #: main/filesdb.c:158
 #, c-format
 msgid "files list file for package `%.250s' contains empty filename"
-msgstr "fillistfilen för paketet \".250s\" innehåller tomt filnamn"
+msgstr "fillistfilen för paketet \"%.250s\" innehåller tomt filnamn"
 
 #: main/filesdb.c:170
 #, c-format
@@ -1984,7 +1984,7 @@ msgid ""
 "%d expected program(s) not found on PATH.\n"
 "NB: root's PATH should usually contain /usr/local/sbin, /usr/sbin and /sbin."
 msgstr ""
-"%s förväntade program som inte finns i PATH.\n"
+"%d förväntade program som inte finns i PATH.\n"
 "Obs! roots PATH bör vanligtvis innehålla /usr/local/sbin, /usr/sbin och /"
 "sbin."
 
@@ -2681,7 +2681,7 @@ msgstr ""
 #: main/processarc.c:692
 #, c-format
 msgid "unable to remove obsolete info file `%.250s'"
-msgstr "kunde inte ta bort gammal informationsfil \"%.250\""
+msgstr "kunde inte ta bort gammal informationsfil \"%.250s\""
 
 #: main/processarc.c:695
 #, c-format
@@ -2709,7 +2709,7 @@ msgstr "paketets kontrollinformation innehåller katalogen \"%.250s\""
 #, c-format
 msgid "package control info rmdir of `%.250s' didn't say not a dir"
 msgstr ""
-"\"rmdir\" på paketets kontrollinformation \"%.250\" svarade inte \"ej katalog"
+"\"rmdir\" på paketets kontrollinformation \"%.250s\" svarade inte \"ej katalog"
 "\""
 
 #: main/processarc.c:724
@@ -3141,7 +3141,7 @@ msgstr "%s: internt gzip-fel: skrivning: \"%s\""
 #: dpkg-deb/build.c:188
 #, c-format
 msgid "%s: internal gzip error: read(%i) != write(%i)"
-msgstr "%s: internt gzip-fel: läs(%1) != skriv(%1)"
+msgstr "%s: internt gzip-fel: läs(%i) != skriv(%i)"
 
 #: dpkg-deb/build.c:195
 #, c-format
@@ -4123,7 +4123,7 @@ msgstr "--split tar som mest ett källfilnamn och ett destinationsprefix"
 #: split/split.c:63
 #, c-format
 msgid "unable to open source file `%.250s'"
-msgstr "kunde inte öppna källfil \"%.250\""
+msgstr "kunde inte öppna källfil \"%.250s\""
 
 #: split/split.c:64
 msgid "unable to fstat source file"
