--- a/main/dpkg-query.8
+++ b/main/dpkg-query.8
@@ -66,7 +66,7 @@ listed. It can include the standard escape sequences \en (newline), \er
 (carriage return) or \e\e (plain backslash). Package information can be
 included by inserting variable references to package fields using the
 ${var[;width]} syntax. Fields are printed be right-aligned unless the
-width is negative in which case left aligenment will be used. 
+width is negative in which case left alignment will be used. 
 
 .SH ENVIRONMENT
 .TP
