--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -207,7 +207,7 @@ Lista paket som matchar det givna mönstret.
 Om inget \fIpaketnamnsmönster\fP anges listas alla paket i
 \fI/var/lib/dpkg/available\fP.
 Skalets normala jokertecken tillåts i \fIpaketnamnsmönster\fP.
-(Du behöver sannolikt skriva \fIpaketnamnsmönster\fP inom citationstecken
+(Du måste sannolikt skriva \fIpaketnamnsmönster\fP inom citationstecken
 för att förhindra att skalet expanderar filnamnet.
 Till exempel så listar \fBdpkg -l 'libc5*'\fP alla paket vars namn börjar på
 "libc5").
