--- a/doc/sv/dpkg-query.8
+++ b/doc/sv/dpkg-query.8
@@ -1,12 +1,12 @@
 .\" Translation of CVS revision 1.3
 .TH DPKG\-QUERY 8 "Augusti 2001" "Debianprojektet" "Dpkg-sviten"
-.SH NAME
+.SH NAMN
 dpkg\-query \- ett verktyg för att fråga dpkg-databasen
 
-.SH SYNOPSIS
+.SH SYNOPS
 .B dpkg-query
 
-.SH DESCRIPTION
+.SH BESKRIVNING
 \fBdpkg-query\fP är ett verktyg för att visa information om paket i
 \fBdpkg\fP-databasen.
 
