--- a/doc/sv/dpkg.8
+++ b/doc/sv/dpkg.8
@@ -106,7 +106,7 @@ Om flaggan \fB--recursive\fP eller \fB-R\fP anges måste
 Installationen består av följande steg:
 .br
 
-\fB1.\fP Extrahera kontrollfilerna ur paketet.
+\fB1.\fP Extrahera styrfilerna ur paketet.
 .br
 
 \fB2.\fP Om en annan version av samma paket redan fanns installerat vid
@@ -262,7 +262,7 @@ Dessa hanterar saknad version som om den är tidigare än alla andra
 versioner: \fBlt le eq ne ge gt\fP.
 Dessa hanterar saknad version som om den är senare än alla andra
 versioner: \fBlt-nl le-nl ge-nl gt-nl\fP.
-Dessa tillhandahålls endast för kompatibilitet med kontrollfilssyntaxen:
+Dessa tillhandahålls endast för kompatibilitet med styrfilssyntaxen:
 \fB< << <= = >= >> >\fP.
 .TP
 .B dpkg --command-fd <n>
@@ -293,13 +293,13 @@ Se \fBdpkg-deb\fP(1) för ytterligare information om följande åtgärder:
 \fBdpkg -b\fP | \fB--build\fP \fIkatalog\fP [\fIfilnamn\fP]
     Bygg ett deb-paket.
 \fBdpkg -c\fP | \fB--contents\fP \fIfilnamn\fP
-    Listar innehållet i ett deb-paket.
+    Visar innehållet i ett deb-paket.
 \fBdpkg -e\fP | \fB--control\fP \fIfilnamn\fP [\fIkatalog\fP]
-    Extraherar kontrollinformation från ett paket.
+    Extraherar styrinformation från ett paket.
 \fBdpkg -x\fP | \fB--extract\fP \fIfilnamn katalog\fP
     Extraherar filerna i ett paket.
 \fBdpkg -f\fP | \fB--field\fP  \fIfilnamn\fP [\fIcontrol-fält\fP] ...
-    Visar fält från paketets kontrollfil (control).
+    Visar fält från paketets styrfil (control).
 \fBdpkg --fsys-tarfile\fP \fIfilnamn\fP
     Visar filsystems-tarfilen i Debianpaketet.
 \fBdpkg -I\fP | \fB--info\fP \fIfilnamn\fP [\fIcontrol-fil\fP]
