--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Nov 17 15:57:57 CET 2001 peter karlsson <peterk@debian.org>
+
+  * doc/sv/dpkg-query.8, dpkg-deb.1: Initial Swedish translation.
+    dpkg.8: Translation fixups.
+  * dpkg/dpkg-query.8: Corrected spelling.
+
 Thu Oct 25 16:56:06 JST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * po/{de,it,pt_BR,sv}.po: Fix translation with inconsistent printf
