Add missing space in dpkg-doc description

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Nov 17 17:16:44 CET 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * debian/control: add missing space in dpkg-doc description
+
 Sat Nov 17 15:57:57 CET 2001 peter karlsson <peterk@debian.org>
 
   * doc/sv/dpkg-query.8, dpkg-deb.1: Initial Swedish translation.
